SERVER-32023 quitExit should call TerminateProcess on Windows